[tool.poetry]
name = "petapp"
version = "0.1.0"
description = ""
authors = ["dkultyshev <dkultyshev@neoflex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.111.0"}
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

